--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
+    <color name="colorPrimary">#3F51B5</color> <color name="colorPrimaryVariant">#303F9F</color> <color name="colorOnPrimary">#FFFFFF</color> <color name="colorSurface">#FFFFFF</color> <color name="colorOnSurface">#000000</color> <color name="colorBackground">#F5F5F5</color> <color name="colorOnBackground">#000000</color> <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="warm_gray">#F5F5F5</color>
-    <color name="warm_gray_dark">#E0E0E0</color>
-    <color name="warm_accent">#FFC107</color>
-    <color name="warm_white">#FFFDE7</color>
-    <color name="dark_text">#212121</color>
 </resources>
